samples/_failures_safe/1761636544_ee8816_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3a9dc29f.c: In function ‘tokenize’:
./samples/SAFE/__tmp_3a9dc29f.c:161:9: error: expected expression at end of input
  161 |         tokens[
      |         ^~~~~~
./samples/SAFE/__tmp_3a9dc29f.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3a9dc29f.c:161:9: error: expected declaration or statement at end of input
